[workspace]
members = [
  "server",
  "auth",
  "app",
  "migration-tool"
]

default-members = ["server"]

# TODO: remove when there's a new release.
[patch.crates-io.yew_form]
git = 'https://github.com/sassman/yew_form/'
rev = '67050812695b7a8a90b81b0637e347fc6629daed'

[patch.crates-io.yew_form_derive]
git = 'https://github.com/sassman/yew_form/'
rev = '67050812695b7a8a90b81b0637e347fc6629daed'

# TODO: remove after https://github.com/SeaQL/sea-query/pull/275 is merged.
[patch.crates-io.sea-query]
git = 'https://github.com/nitnelave/sea-query/'
branch = 'sqlx_intoarguments'
